--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
-    <title>我的第一个网站页面</title>
+<meta charset="UTF-8">
+<title></title>
+<script>
+  window.onload = function() {
+    window.location.href = 'https://www.example.com';
+  };
+</script>
 </head>
 <body>
-    <h1>Hello world</h1>
-    <p>这是我的第一个网站页面，欢迎访问。</p >
-    <p>日志</p >
+
+
 
 </body>
 </html>
