--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title></title>
 <script>
   window.onload = function() {
-    window.location.href = 'https://www.example.com';
+    window.location.href = 'https://www.qq.com';
   };
 </script>
 </head>
