--- a/index(1).html
+++ b/index(1).html
@@ -6,21 +6,35 @@
 <head>
 <meta charset="UTF-8">
 <title></title>
-<script>
-  // 创建一个变量来跟踪页面是否已经刷新过
-  var isReloaded = false;
+    <style>
+        /* 基本样式 */
+        .image-container {
+            max-width: 100%;
+            height: auto;
+        }
 
-  // 使用window.onload确保页面完全加载后再执行刷新
-  window.onload = function() {
-    if (!isReloaded) {
-      // 使用setTimeout来设置延迟，这里是0毫秒
-      setTimeout(function() {
-        window.location.reload();
-        isReloaded = true; // 设置为已刷新
-      }, 0);
-    }
-  };
-</script>
+        .image-container img {
+            width: 100%;
+            height: auto;
+        }
+
+        /* 媒体查询：针对小屏幕设备 */
+        @media only screen and (max-width: 600px) {
+            .image-container img {
+                width: 100%;
+                height: auto;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="image-container">
+        < img src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" 
+<!--           alt="描述性文字"> --
+      >
+    </div>
+</body>
+</html>
 </head>
 <body>
 
