--- a/index(1).html
+++ b/index(1).html
@@ -29,9 +29,7 @@
 </head>
 <body>
     <div class="image-container">
-        < img src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" 
-<!--           alt="描述性文字"> --
-      >
+        < img src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" alt="描述性文字">
     </div>
 </body>
 </html>
