--- a/index(1).html
+++ b/index(1).html
@@ -34,10 +34,8 @@
 </head>
 <body>
 
-<p style="vertical-align:inherit;">
-    <a href="http://url.newrank.cn/3gO9ze" ><img style="vertical-align:inherit;-webkit-user-select: none;" src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" data-ratio="0.796078431372549" data-w="255"/></a>
-</p>
-
+<div align="center"><img data-="" src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" style="margin: 0.5px; padding: 0.5px; vertical-align: middle; width: 450px;" /></div>
+<div align="center"><img data-="" src="https://wework.qpic.cn/wwpic/561664_lX8ilZjATRKaHG3_1630914223/0" style="margin: 0.5px; padding: 0.5px; vertical-align: middle; width: 450px;" /></div>
 
 
 <!-- 直接
