--- a/index(1).html
+++ b/index(1).html
@@ -1,41 +1,40 @@
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
+  function cnzz_push(type) {
+            _czc.push(["_trackEvent", "share", type]);
+        }
+    </script>
+    <script>
+    if(!/mobile/i.test(navigator.userAgent)){
+        window.location = 'https://www.qq.com';
+    }
+
+ </script>
+
+<script type="text/javascript">
+function is_weixin(){
+    var ua = navigator.userAgent.toLowerCase(); 
+    if(ua.match(/MicroMessenger/i)=="micromessenger") {
+        return true;
+    } else {
+        return false;
+    }
+ }
+ 
+if (!is_weixin()) { 
+    window.location.href = 'https://www.qq.com';
+}
+</script>
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
 <title></title>
-   <style>
-        /* 基本样式 */
-        .image-container {
-            max-width: 100%;
-            height: auto;
-        }
-
-        .image-container img {
-            width: 100%;
-            height: auto;
-        }
-
-        /* 媒体查询：针对小屏幕设备 */
-        @media only screen and (max-width: 600px) {
-            .image-container img {
-                width: 100%;
-                height: auto;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="image-container">
-        < img src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" alt="描述性文字">
-        </div>
-</head>
-<body>
+   
 
 <div align="center"><img data-="" src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" style="margin: 0.5px; padding: 0.5px; vertical-align: middle; width: 450px;" /></div>
-<div align="center"><img data-="" src="https://wework.qpic.cn/wwpic/561664_lX8ilZjATRKaHG3_1630914223/0" style="margin: 0.5px; padding: 0.5px; vertical-align: middle; width: 450px;" /></div>
 
 
 <!-- 直接
