--- a/index(1).html
+++ b/index(1).html
@@ -1,41 +1,28 @@
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
- <script>
-  function cnzz_push(type) {
-            _czc.push(["_trackEvent", "share", type]);
-        }
-    </script>
-    <script>
-    if(!/mobile/i.test(navigator.userAgent)){
-        window.location = 'https://www.qq.com';
-    }
-
- </script>
-
-<script type="text/javascript">
-function is_weixin(){
-    var ua = navigator.userAgent.toLowerCase(); 
-    if(ua.match(/MicroMessenger/i)=="micromessenger") {
-        return true;
-    } else {
-        return false;
-    }
- }
- 
-if (!is_weixin()) { 
-    window.location.href = 'https://www.qq.com';
-}
-</script>
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
 <title></title>
-   
+</script><script>
 
-<div align="center"><img data-="" src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" style="margin: 0.5px; padding: 0.5px; vertical-align: middle; width: 450px;" /></div>
+
+<div style="text-align: center;">
+    < img src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" 
+         alt="描述性文字" 
+         style="margin: 0.5px; padding: 0.5px; vertical-align: middle; width: 100%;">
+</div>
+</script>
+    
+    <script>
+
+<p style="vertical-align:inherit;">
+    <a href="http://url.newrank.cn/3gO9ze" ><img style="vertical-align:inherit;-webkit-user-select: none;" src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" data-ratio="0.796078431372549" data-w="255"/></a>
+</p>
+
+</script>
 
 
 <!-- 直接
