--- a/index(1).html
+++ b/index(1).html
@@ -6,23 +6,14 @@
 <head>
 <meta charset="UTF-8">
 <title></title>
-</script><script>
 
-
-<div style="text-align: center;">
-    < img src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" 
-         alt="描述性文字" 
-         style="margin: 0.5px; padding: 0.5px; vertical-align: middle; width: 100%;">
-</div>
-</script>
-    
-    <script>
+<p style="vertical-align:inherit;">
+    <a href="http://url.newrank.cn/3gO9ze" ><img style="vertical-align:inherit;-webkit-user-select: none;" src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" style="margin: 0.5px; padding: 0.5px; vertical-align: middle; width: 100%;"/></a>
+</p>
 
 <p style="vertical-align:inherit;">
     <a href="http://url.newrank.cn/3gO9ze" ><img style="vertical-align:inherit;-webkit-user-select: none;" src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" data-ratio="0.796078431372549" data-w="255"/></a>
 </p>
-
-</script>
 
 
 <!-- 直接
