--- a/index(1).html
+++ b/index(1).html
@@ -7,14 +7,10 @@
 <meta charset="UTF-8">
 <title></title>
 
-<p style="vertical-align:inherit;">
-    <a href="http://url.newrank.cn/3gO9ze" ><img style="vertical-align:inherit;-webkit-user-select: none;" src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" style="margin: 0.5px; padding: 0.5px; vertical-align: middle; width: 100%;"/></a>
-</p>
 
-<p style="vertical-align:inherit;">
-    <a href="http://url.newrank.cn/3gO9ze" ><img style="vertical-align:inherit;-webkit-user-select: none;" src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" data-ratio="0.796078431372549" data-w="255"/></a>
-</p>
+<div align="center"><img data-="" src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" style="margin: 0.5px; padding: 0.5px; vertical-align: middle; width: 100%;"/></div>
 
+<div align="center"><img data-="" src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" style="margin: 0.5px; padding: 0.5px; vertical-align: middle; width: 450px;" /></div>
 
 <!-- 直接
 <pre>&lt;a href="http://www.example.com" target="_blank"&gt;访问示例网站&lt;/a&gt;</pre> -->
