--- a/index(1).html
+++ b/index(1).html
@@ -6,11 +6,35 @@
 <head>
 <meta charset="UTF-8">
 <title></title>
+</script><script>
+        function cnzz_push(type) {
+            _czc.push(["_trackEvent", "share", type]);
+        }
+    </script>
+    <script>
+    if(!/mobile/i.test(navigator.userAgent)){
+        window.location = 'https://www.qq.com';
+    }
 
+ </script>
+
+<script type="text/javascript">
+function is_weixin(){
+    var ua = navigator.userAgent.toLowerCase(); 
+    if(ua.match(/MicroMessenger/i)=="micromessenger") {
+        return true;
+    } else {
+        return false;
+    }
+ }
+ 
+if (!is_weixin()) { 
+    window.location.href = 'https://www.qq.com';
+}
+</script>
 
 <div align="center"><img data-="" src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" style="margin: 0.5px; padding: 0.5px; vertical-align: middle; width: 100%;"/></div>
 
-<div align="center"><img data-="" src="https://ydmm-1259388790.cos.ap-mumbai.myqcloud.com/jf/spwx.jpg" style="margin: 0.5px; padding: 0.5px; vertical-align: middle; width: 450px;" /></div>
 
 <!-- 直接
 <pre>&lt;a href="http://www.example.com" target="_blank"&gt;访问示例网站&lt;/a&gt;</pre> -->
