--- a/index(101).html
+++ b/index(101).html
@@ -18,7 +18,7 @@
         document.getElementById('previewButton').addEventListener('click', function() {
             // 假设 article.html 的内容可以通过 Ajax 获取
             var xhr = new XMLHttpRequest();
-            xhr.open('GET', 'article.html', true);
+            xhr.open('GET', 'https://wumingggyx.github.io/wmsp/djsp/1/index(1).html', true);
             xhr.onreadystatechange = function() {
                 if (xhr.readyState == 4 && xhr.status == 200) {
                     // 将获取到的内容展示在页面上
